@@ -11,3 +11,9 @@ MOD_STATUS_USERS="Logged-in Users"
 MOD_STATUS_VIEW_SITE="View Site"
 MOD_STATUS_XML_DESCRIPTION="This module shows the status of the logged-in users."
 MOD_STATUS="User status"
+MOD_STATUS_FIELD_SHOW_LOGGEDIN_USERS_LABEL="Show logged in users"
+MOD_STATUS_FIELD_SHOW_LOGGEDIN_USERS_DESC="Show the number of users logged in for both frontend site and backend control panel"
+MOD_STATUS_FIELD_SHOW_LOGGEDIN_USERS_ADMIN_LABEL="Show logged in back-end users"
+MOD_STATUS_FIELD_SHOW_LOGGEDIN_USERS_ADMIN_DESC="Show the number of users logged in to the back-end control panel"
+MOD_STATUS_FIELD_SHOW_MESSAGES_LABEL="Show messages"
+MOD_STATUS_FIELD_SHOW_MESSAGES_DESC="Show the messages count for the current user's inbox"
