@@ -19,6 +19,41 @@
 	</files>
 	<config>
 		<fields name="params">
+			<fieldset name="basic">
+				<field
+					name="show_loggedin_users"
+					type="radio"
+					default="1"
+					label="MOD_STATUS_FIELD_SHOW_LOGGEDIN_USERS_LABEL"
+					description="MOD_STATUS_FIELD_SHOW_LOGGEDIN_USERS_DESC">
+					<option
+						value="0">JNo</option>
+					<option
+						value="1">JYes</option>
+				</field>
+				<field
+					name="show_loggedin_users_admin"
+					type="radio"
+					default="1"
+					label="MOD_STATUS_FIELD_SHOW_LOGGEDIN_USERS_ADMIN_LABEL"
+					description="MOD_STATUS_FIELD_SHOW_LOGGEDIN_USERS_ADMIN_DESC">
+					<option
+						value="0">JNo</option>
+					<option
+						value="1">JYes</option>
+				</field>
+				<field
+					name="show_messages"
+					type="radio"
+					default="1"
+					label="MOD_STATUS_FIELD_SHOW_MESSAGES_LABEL"
+					description="MOD_STATUS_FIELD_SHOW_MESSAGES_DESC">
+					<option
+						value="0">JNo</option>
+					<option
+						value="1">JYes</option>
+				</field>
+			</fieldset>
 			<fieldset name="advanced">
 				<field
 					name="layout"
